# GenMagneicField

./: CMakeLists.txt  Makefile  README.md  VectorFunction.cpp  VectorFunction.h  graph.py  task1.cpp  task2.cpp
